# AI-2024

ConvoFinisher/: convolayer.cpp  convolayer.hpp  denselayer.cpp  denselayer.hpp  layer.hpp  main  main.cpp  main3.cpp  makefile  pseument.cpp  pseument.hpp  save
ConvoFinisher/OPseu/: pseument.hpp
ConvoTester/.PseuVersions/: main2.cpp
ConvoTester/.PseuVersions/SupaPseu1/: pseument.cpp
ConvoTester/data/arc/: exit13_1.txt  exit24_1.txt  exit2_1.txt  exit30_1.txt  exit36_1.txt  exit39_1.txt  exit3_1.txt  exit41_1.txt  exit49_5.txt  exit65_1.txt  exit88_1.txt  exit9_1.txt  exit9_5.txt
ConvoTester/include/: pseument.hpp
ConvoTester/src/: convolayer.cpp  denselayer.cpp  main.cpp  pseument.cpp
Networks/: network  network.cpp
Networks/AdamPseument/: Pseument.cpp  Pseument.hpp
Networks/AdamwPseument/: Pseument.cpp  Pseument.hpp
Networks/MomentumPseument/: Pseument.cpp  Pseument.hpp
Networks/Pseument/: Pseument.cpp
Networks/SGDPseument/: Pseument.cpp  Pseument.hpp
Networks/SuperPseument/: Pseument.cpp  Pseument.hpp
PongAI/: CMakeLists.txt
PongAI/.PseuVersions/SupaPseu1/: pseument.cpp  pseument.hpp
PongAI/data/arc/: exit10_3.txt  exit13_3.txt  exit14_3.txt  exit15_10.txt  exit17_3.txt  exit18_3.txt  exit19_1.txt  exit19_3.txt  exit25_10.txt  exit25_3.txt  exit28_1.txt  exit34_3.txt  exit5_3.txt  exit6_3.txt  exit7_3.txt  nw1_3.txt  nw31_3.txt  nw36_3.txt  nw7_3.txt
PongAI/include/: layer.hpp  pseument.hpp
PongAI/src/: layer.cpp  main.cpp  pseument.cpp
VisionAI/src/: pseument.cpp
VisionAIDense/: CMakeLists.txt  build_debug.sh
VisionAIDense/.PseuVersions/SupaPseu1/: pseument.hpp
VisionAIDense/include/: layer.hpp
VisionAIDense/src/: layer.cpp  main.cpp
VisionAIOld/: Makefile  VisionAI  VisionAI.cpp  tester
VisionAIOld/Libraries copy/AdvancedPseument/: Pseument.cpp
VisionAIOld/Libraries copy/Pseument/: Pseument.cpp  Pseument.hpp
VisionAIOld/Libraries copy/Pseument0/: Pseument.cpp
VisionAIOld/Libraries copy/SupaPseument/: Pseument.cpp
VisionAIOld/Libraries/AdvancedPseument/: Pseument.hpp
VisionAIOld/Libraries/Pseument0/: Pseument.hpp  VisionAI.cpp
VisionAIOld/Libraries/SupaPseument/: Pseument.hpp
VisionAIOld/Other/: tester.cpp
VisionAIOld/Saved/: exit27_5.txt  exit40_2.txt  exit42_5.txt  exit59_2.txt  exit64_2.txt  exit6_5.txt  exit96_5.txt  nw15_2.txt  nw24_5.txt  nw27_2.txt  nw89_2.txt  nw98_2.txt
VisionSpeed/: CMakeLists.txt
VisionSpeed/data/arc/: exit0_1.txt  exit0_5.txt  exit36_1.txt  exit74_1.txt  exit76_1.txt  exit92_1.txt  exit99_1.txt  nw40_1.txt  nw49_1.txt  nw93_1.txt  nw98_1.txt
VisionSpeed/include/: convolayer.hpp  pseument.hpp
VisionSpeed/mains/: nums.cpp
VisionSpeed/src/: convolayer.cpp  draw.cpp  pseument.cpp
XorTester/: convolayer.cpp  convolayer.hpp  denselayer.cpp  denselayer.hpp  layer.hpp  main  main.cpp  makefile  pseument.cpp  pseument.hpp  save
